fix: fix landing page align

--- a/online-zoo/pages/landing/landing.css
+++ b/online-zoo/pages/landing/landing.css
@@ -113,17 +113,17 @@ header {
   background:  #fcfcfc;
   display: flex;
   justify-content: center;
-  margin-left: calc( ( 100% - 1670px ) / 2 );;
+  margin-left: calc( ( 100% - 1610px ) / 2 );;
 }
 .watch-online-wrapper {
-  width: 1436px;
-  height: 760px;
+  width: 1430px;
+  height: 670px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 72px;
 }
 .aside {
-  width: 90px;
   background:  #fcfcfc;
   position: sticky;
   left: calc( ( 100% - 1800px ) / 2 );
@@ -131,7 +131,7 @@ header {
   transform: translateY(-94px);
 }
 .aside__nav {
-  height: 760px;
+  height: 670px;
   width: 90px;
   display: flex;
   flex-direction: column;
@@ -164,6 +164,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 60px;
 }
 .watch-online-wrapper-content__h2 {
   font-style: normal;
@@ -180,6 +181,7 @@ header {
   font-size: 84px;
   line-height: 106px;
   color: #080029;
+  margin-bottom: 34px;
 }
 .watch-online-wrapper-content__img {
   overflow: hidden;
@@ -204,7 +206,7 @@ header {
 }
 .watch-online-wrapper-content__buttons {
   display: flex;
-  width: 605px;
+  width: 570px;
   justify-content: space-between;
 }
 .watch-online-wrapper-content__button-choose {
@@ -281,7 +283,7 @@ header {
 }
 .how-it-works {
   width: 1800px;
-  height: 980px;
+  height: 969px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -293,10 +295,10 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin-right: 20px;
+  margin-bottom: 16px;
 }
 .how-it-works__picture {
-  margin-left: 20px;
+  margin-right: 30px;
 }
 .how-it-works__img {
   width: 512px;
@@ -365,11 +367,12 @@ header {
 }
 .slider__nav {
   width: 326px;
-  height: 364px;
+  height: 350px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
+  margin-top: 90px;
 }
 .slider__h2 {
   font-style: normal;
@@ -421,6 +424,7 @@ header {
   flex-wrap: wrap;
   align-content: space-between;
   justify-content: space-between;
+  margin-left: 40px;
 }
 .item {
   width: 328px;
@@ -586,11 +590,11 @@ header {
 }
 .pay-and-feed__content_align-left {
   align-self: flex-start;
-  margin-left: 224px;
+  margin-left: 180px;
 }
 .pay-and-feed__content_align-right {
   align-self: flex-end;
-  margin: 60px 116px 47px 0;
+  margin: 60px 60px 47px 0;
 }
 .pay-and-feed__h2 {
   margin-bottom: 30px;
@@ -631,7 +635,7 @@ header {
   width: 273px;
   height: 211px;
   position: absolute;
-  left: 552px;
+  left: 478px;
   top: 146px;
 }
 .pay-and-feed__delivery-security-arrow {
@@ -640,7 +644,7 @@ header {
   height: 197px;
   position: absolute;
   left: -368px;
-  top: 162px;
+  top: 148px;
 }
 .testimonials-wrapper {
   display: flex;
@@ -719,7 +723,6 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin-right: 60px;
 }
 .testimonials-slider__items {
   width: 1064px;
@@ -832,7 +835,7 @@ header {
 .zoogeography__map {
   width: 1223px;
   height: 700px;
-  margin: 50px 85px 0 0;
+  margin: 50px 22px 0 0;
   background: url(../../assets/images/zoogeography__map.svg);
   position: relative;
 }
@@ -875,7 +878,7 @@ header {
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  padding: 20px 40px 40px;
+  padding: 20px 40px 55px;
   height: 298px;
 }
 .zoogeography__mark {
@@ -1023,7 +1026,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin-right: 50px;
+  margin-right: 90px;
 }
 .footer__donate {
   width: 339px;
@@ -1062,7 +1065,7 @@ header {
 }
 .footer__logos {
   width: 303px;
-  height: 384px;
+  height: 371px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
